<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="0.47"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtContact_CreateGroup"
            android:id="@+id/btCreateGroup"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_weight="0.47"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtContact_createConference"
            android:id="@+id/btCreateConference" />
    </LinearLayout>

    <LinearLayout

        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/tabFriend"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContact_TabFriend" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tabFollowing"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContact_TabFollowing" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tabFollower"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContact_TabFollowers" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>




</LinearLayout>
